Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.0.0-beta1
-
Fix Version/s: Qt Creator 4.0.0-beta1
-
Component/s: Debugger
-
Labels:
-
Commits:9f4124df5bdd19c9090ca6a0cb7dc2c60371a900
Description
Steps to reproduce:
- start debugging with any project having some bp's that can be hit
- when stopped at a bp (or interrupted) check that L&E has some variables displayed, maybe expand some of them
- right click and choose 'Copy View Contents to Clipboard'
- paste the copied stuff somewhere
Current result:
- everything that has been copied seems to be replaced by whitespaces (correct line/columns, but nothing to be seen)
Note: Using Copy View Contents to Editor works fine.