Debugger: Fix copy to clipboard...

...for Locals & Expressions.

Task-number: QTCREATORBUG-15870
Change-Id: I5768908ab731adffd695627206fd03cc5ccce957
Reviewed-by: hjk <hjk@theqtcompany.com>